fix: universityMajor search