@@ -22,6 +22,7 @@ import com.example.SBA_M.exception.AppException;
 import com.example.SBA_M.exception.ErrorCode;
 import com.example.SBA_M.mapper.UniversityMajorMapper;
 import com.example.SBA_M.repository.commands.*;
+import com.example.SBA_M.repository.elasticsearch.UniversityMajorSearchRepository;
 import com.example.SBA_M.repository.queries.UniversityMajorReadRepository;
 import com.example.SBA_M.service.UniversityMajorService;
 import com.example.SBA_M.service.messaging.producer.UniversityMajorProducer;
@@ -30,29 +31,24 @@ import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
 import co.elastic.clients.elasticsearch._types.query_dsl.*;
-import co.elastic.clients.elasticsearch.core.SearchRequest;
-import co.elastic.clients.elasticsearch.core.SearchResponse;
+
 
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
 
+import javax.annotation.Nullable;
 import java.io.IOException;
 import java.time.Instant;
+import java.time.Year;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UniversityMajorServiceImpl implements UniversityMajorService {
-    private static final String INDEX_NAME = "university_major_search";
-    private static final String FIELD_SUBJECT_COMBINATION_ID = "subjectCombinationId";
-    private static final String FIELD_MAJOR_ID = "majorId";
-    private static final String FIELD_STATUS = "status";
-    private static final String FIELD_PROVINCE = "province";
-    private static final String STATUS_ACTIVE = "ACTIVE";
-    private static final int DEFAULT_MAX_RESULTS = 100;
+
 
     private final UniversityRepository universityRepository;
     private final MajorRepository majorRepository;
@@ -64,7 +60,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     private final UniversityMajorProducer universityMajorProducer;
     private final UniversityMajorReadRepository universityMajorReadRepository;
     private final SubjectCombinationRepository subjectCombinationService;
-    private final ElasticsearchClient elasticsearchClient;
+    private final UniversityMajorSearchRepository universityMajorSearchRepository;
+
 
     @Override
     public PageResponse<UniversityMajorResponse> getAllUniversityMajors(int page, int size) {
@@ -123,8 +120,8 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
         entity.setUpdatedAt(Instant.now());
 
         UniversityMajor saved = universityMajorRepository.save(entity);
-       universityMajorProducer.sendCreateEvents(saved);
-        universityMajorProducer.sendSearchEvent(saved);
+         universityMajorProducer.sendCreateEvents(saved);
+        universityMajorProducer.sendSearchEvent(saved,entity.getYear());
         return universityMajorMapper.toResponse(saved);
     }
 
@@ -163,7 +160,7 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
 
         UniversityMajor saved = universityMajorRepository.save(existing);
         universityMajorProducer.sendCreateEvents(saved);
-        universityMajorProducer.sendSearchEvent(saved);
+        universityMajorProducer.sendSearchEvent(saved,request.getYear());
         return universityMajorMapper.toResponse(saved);
     }
 
@@ -174,7 +171,7 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                 .orElseThrow(() -> new AppException(ErrorCode.UNIVERSITY_MAJOR_NOT_FOUND));
         um.setStatus(Status.DELETED);
         universityMajorRepository.save(um);
-        universityMajorProducer.sendSearchEvent(um);
+        universityMajorProducer.sendSearchEvent(um,um.getYear());
         universityMajorProducer.sendCreateEvents(um);
     }
 
@@ -226,7 +223,6 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
                                             return new MajorEntry(
                                                     any.getMajorId().toString(),
                                                     any.getMajorName(),
-                                                    null, // Optional degree
                                                     scores,
                                                     any.getNote()
                                             );
@@ -372,93 +368,77 @@ public class UniversityMajorServiceImpl implements UniversityMajorService {
     }
     @Override
     public List<UniversitySubjectCombinationSearchResponse> searchBySubjectCombination(
-            Long subjectCombinationId, Long majorId, String province) throws IOException {
-        validateSubjectCombinationId(subjectCombinationId);
+            Long subjectCombinationId,
+            @Nullable String universityName) throws IOException {
 
-        BoolQuery.Builder boolQuery = new BoolQuery.Builder()
-                .must(m -> m.term(t -> t.field(FIELD_SUBJECT_COMBINATION_ID).value(subjectCombinationId)))
-                .must(m -> m.term(t -> t.field(FIELD_STATUS).value(STATUS_ACTIVE)));
+        int currentYear = Year.now().getValue();
+        List<UniversityMajorSearch> results = new ArrayList<>();
 
-        if (majorId != null) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_MAJOR_ID).value(majorId)));
+        // Try searching for current year first, then previous years
+        for (int year = currentYear; year >= currentYear - 5; year--) {
+            if (universityName != null && !universityName.trim().isEmpty()) {
+                results = universityMajorSearchRepository.findBySubjectCombinationIdAndUniversityNameContainingIgnoreCaseAndStatusAndYear(
+                        subjectCombinationId, universityName.trim(), Status.ACTIVE, year);
+            } else {
+                results = universityMajorSearchRepository.findBySubjectCombinationIdAndStatusAndYear(
+                        subjectCombinationId, Status.ACTIVE, year);
+            }
+
+            if (!results.isEmpty()) {
+                break; // Found results for this year, stop searching
+            }
         }
 
-        if (isValidString(province)) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_PROVINCE).value(province.trim())));
-        }
-
-        SearchResponse<UniversityMajorSearch> response = executeSearch(boolQuery.build());
-        return response.hits().hits().stream()
-                .map(hit -> {
-                    UniversityMajorSearch doc = hit.source();
-                    if (doc == null) {
-                        return null;
-                    }
-                    return new UniversitySubjectCombinationSearchResponse(
-                            doc.getUniversityName(),
-                            doc.getUniversityMajorCountBySubjectCombination());
-                })
-                .filter(Objects::nonNull)
-                .toList();
+        return results.stream()
+                .map(this::mapToSubjectCombinationResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<UniversityMajorSearchResponse> searchByMajor(
-            Long majorId, String province, String method, Long subjectCombinationId) throws IOException {
-        validateMajorId(majorId);
+            Long majorId,
+            @Nullable String universityName) throws IOException {
 
-        BoolQuery.Builder boolQuery = new BoolQuery.Builder()
-                .must(m -> m.term(t -> t.field(FIELD_MAJOR_ID).value(majorId)))
-                .must(m -> m.term(t -> t.field(FIELD_STATUS).value(STATUS_ACTIVE)));
+        int currentYear = Year.now().getValue();
+        List<UniversityMajorSearch> results = new ArrayList<>();
 
-        if (isValidString(province)) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_PROVINCE).value(province.trim())));
+        // Try searching for current year first, then previous years
+        for (int year = currentYear; year >= currentYear - 5; year--) {
+            if (universityName != null && !universityName.trim().isEmpty()) {
+                results = universityMajorSearchRepository.findByMajorIdAndUniversityNameContainingIgnoreCaseAndStatusAndYear(
+                        majorId, universityName.trim(), Status.ACTIVE, year);
+            } else {
+                results = universityMajorSearchRepository.findByMajorIdAndStatusAndYear(
+                        majorId, Status.ACTIVE, year);
+            }
+
+            if (!results.isEmpty()) {
+                break; // Found results for this year, stop searching
+            }
         }
 
-        if (subjectCombinationId != null) {
-            boolQuery.filter(f -> f.term(t -> t.field(FIELD_SUBJECT_COMBINATION_ID).value(subjectCombinationId)));
-        }
-
-        SearchResponse<UniversityMajorSearch> response = executeSearch(boolQuery.build());
-        return response.hits().hits().stream()
-                .map(hit -> {
-                    UniversityMajorSearch doc = hit.source();
-                    if (doc == null) {
-                        return null;
-                    }
-                    return new UniversityMajorSearchResponse(
-                            doc.getUniversityName(),
-                            doc.getUniversityMajorCountByMajor());
-                })
-                .filter(Objects::nonNull)
-                .toList();
+        return results.stream()
+                .map(this::mapToMajorResponse)
+                .collect(Collectors.toList());
     }
 
-    private SearchResponse<UniversityMajorSearch> executeSearch(BoolQuery boolQuery) throws IOException {
-        SearchRequest searchRequest = SearchRequest.of(s -> s
-                .index(INDEX_NAME)
-                .query(q -> q.bool(boolQuery))
-                .size(DEFAULT_MAX_RESULTS));
+    private UniversitySubjectCombinationSearchResponse mapToSubjectCombinationResponse(UniversityMajorSearch entity) {
+        return UniversitySubjectCombinationSearchResponse.builder()
+                .universityName(entity.getUniversityName())
+                .universityMajorCountBySubjectCombination(entity.getUniversityMajorCountBySubjectCombination())
+                .build();
+    }
 
-        try {
-            return elasticsearchClient.search(searchRequest, UniversityMajorSearch.class);
-        } catch (IOException e) {
-            throw new AppException(ErrorCode.SEARCH_FAILED, "Search operation failed: " + e.getMessage());
-        }
+    private UniversityMajorSearchResponse mapToMajorResponse(UniversityMajorSearch entity) {
+        return UniversityMajorSearchResponse.builder()
+                .universityName(entity.getUniversityName())
+                .universityMajorCountByMajor(entity.getUniversityMajorCountByMajor())
+                .build();
     }
-    private void validateSubjectCombinationId(Long subjectCombinationId) {
-        if (subjectCombinationId == null || subjectCombinationId <= 0) {
-            throw new AppException(ErrorCode.INVALID_PARAM, "Subject combination ID must be a positive long");
-        }
-    }
-    private boolean isValidString(String input) {
-        return input != null && !input.trim().isEmpty();
-    }
-    private void validateMajorId(Long majorId) {
-        if (majorId == null || majorId <= 0) {
-            throw new AppException(ErrorCode.INVALID_PARAM, "Major ID must be a positive long");
-        }
-    }
+
+
+
+
     private String getCurrentUsername() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (authentication == null || !authentication.isAuthenticated() || authentication.getName() == null) {
